syntax = "proto3";

package io.vinicius.banking.proto;
option java_multiple_files = true;

import "google/protobuf/timestamp.proto";

enum AccountType {
    CHECKING = 0;
    SAVINGS = 1;
}

message Account {
    int32 id = 1;
    int32 user_id = 2;
    AccountType type = 3;
    string balance = 4;
    google.protobuf.Timestamp created_at = 5;
}

message AccountList {
    repeated Account results = 1;
}